--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack",
+    "build": "webpack ./src/scripts.js ./src/bundle.js",
+    "buildmin": "webpack ./src/scripts.js ./src/bundle.js -p",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
   },
@@ -24,14 +25,14 @@
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
     "mochapack": "^1.0.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1"
   }
 }
