--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack ./src/scripts.js ./src/bundle.js",
-    "buildmin": "webpack ./src/scripts.js ./src/bundle.js -p",
+    "build": "webpack ./src/index.js ./src/bundle.js",
+    "buildmin": "webpack ./src/index.js ./src/bundle.js -p",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
   },
